# AMOCcollapse

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  run_scripts_test.sh
EN4_mld/: EN4_density.ipynb  EN4_mld_d003.ipynb  README.md
EN4_mld/.ipynb_checkpoints/: EN4_density-checkpoint.ipynb  EN4_mld_d003-checkpoint.ipynb  EN4_mld_plots-checkpoint.ipynb
amoc_collapse_scripts/: README.md  __init__.py  amoc_deep_dive.py  amoc_deep_dive_group.py  helper_scripts.py  imports.py  manual_msft.py  multiprocess.py  path_setup.py
data/: README.md  is_water.nc  mixed_layer_config.json
downloadCMIP/: README.md  downloadCMIP.ipynb
downloadCMIP/.ipynb_checkpoints/: downloadCMIP-checkpoint.ipynb
notebooks/: 2024_07_amoc_deep_dive_manual_v7.ipynb  2024_07_amoc_deep_heat_transport_v0.ipynb  2024_08_freshwater_convergence_v2.ipynb  2024_09_figure_4_en4_data.ipynb  AMOC_strength.ipynb  EN4_figure.ipynb  Surface_fresh_water_convergence_calculation.ipynb
transportsComp/: CMIPread.py  README.md  compute_meridional_transports.py
transportsComp/.ipynb_checkpoints/: CMIPinformation-checkpoint.py  CMIPtransports-checkpoint.py
