[project]
authors = [{name = "Joran R. Angevaare"}]
dependencies = [
  "immutabledict",
  "intake-esm",
  "matplotlib",
  "numba",
  "numpy",
  "optim_esm_tools>=2.1.0",
  "pandas",
  "tqdm",
  "treelib",
  "xarray",
  "statsmodels",
  "seawater",
]
license = {text = "MIT"}
maintainers = [{name = "Joran R. Angevaare"}]
name = "amoc_collapse_scripts"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.0"

[tool.setuptools.package-data]
optim_esm_tools = ['scripts/*', '*.ini*', 'py.typed']

[tool.setuptools.packages.find]
where = [".", "scripts"]

[project.urls]
documentation = 'https://github.com/jmecki/AMOCcollapse/README.md'
homepage = 'https://github.com/jmecki/AMOCcollapse'
repository = 'https://github.com/jmecki/AMOCcollapse'

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.black]
skip-string-normalization = true
target-version = ['py38']

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
  "ignore_errors = True",
]

[tool.flake8]
# Set maximum width of the line to 100
max-line-length = 110
